<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:id="@+id/linear_Haid_Icon"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView_Haid" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/llGrid">

                <GridView
                    android:id="@+id/grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                  <!--  android:horizontalSpacing="4dp"
                    android:verticalSpacing="4dp"/>-->
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/linear_RegTime"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_SessiaReg_Head"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_TimerRegist_Head"
                            android:layout_marginBottom="30dp" />

                        <ProgressBar
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/greenprogress"
                            android:max="300"
                            android:id="@+id/progressBar_Regist_Head"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_ResultReg"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:gravity="center_horizontal">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/result_sessia_head"
                                    android:id="@+id/textView_ResultsReg_Head"
                                    android:layout_gravity="center" />
                            </LinearLayout>

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:gravity="center_horizontal">

                                <org.bissoft.yean.votes.util.CustomDiagram
                                    android:id="@+id/Image_Progress"
                                    android:layout_width="150dp"
                                    android:layout_height="150dp"
                                    android:layout_marginTop="15dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="100dp"
                            android:gravity="center_vertical">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <Space
                                    android:layout_width="14dp"
                                    android:layout_height="14dp"/>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="@string/resut_all"
                                    android:id="@+id/textView_ResultAll"/>

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="14dp"
                                    android:layout_height="14dp"
                                    android:layout_gravity="center_vertical"
                                    android:background="#ffffff">

                                    <ImageView
                                        android:layout_width="10dp"
                                        android:layout_height="10dp"
                                        android:background="#00ff00"
                                        android:layout_centerInParent="true"/>

                                </RelativeLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="@string/result_reg"
                                    android:id="@+id/textView_ResultReg"/>

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="14dp"
                                    android:layout_height="14dp"
                                    android:layout_gravity="center_vertical"
                                    android:background="#ffffff">

                                    <ImageView
                                        android:layout_width="10dp"
                                        android:layout_height="10dp"
                                        android:background="#ff0000"
                                        android:layout_centerInParent="true"/>

                                </RelativeLayout>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="@string/result_eps"
                                    android:id="@+id/textView_ResultEps"/>

                            </TableRow>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#384643">
                    </View>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/qvorum"
                            android:id="@+id/textView_Qvorum" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#384643">
                    </View>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Перереєстрація"
                            android:id="@+id/button_restart_regestration"
                            android:background="@drawable/button_gradient"
                            android:layout_weight="1"
                            android:textColor="#ffffff"
                            android:layout_margin="10dp" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Продовжити"
                            android:id="@+id/button_continue"
                            android:background="@drawable/button_gradient"
                            android:textColor="#ffffff"
                            android:layout_weight="1"
                            android:layout_margin="10dp" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#384643">
                </View>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>